# halite-battlestation

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
bigquery/datasets/benchmark/tables/: actions.json  boards.json
bigquery/datasets/benchmark/views/: _matches_agent_player_index.sql  _matches_result.sql  _true_actions.sql
bigquery/datasets/leaderboard/tables/: leaderboard.json
docs/: playing_matches.md
functions/leaderboard-request/: main.py
functions/match-to-bigquery/: main.py
functions/match-to-storage/: main.py
functions/utils/: CHANGELOG.md
halite_battlestation/: match_player.py
halite_battlestation/bigquery/datasets/benchmark/tables/: actions.json  boards.json  matches.json  players.json  units.json
halite_battlestation/bigquery/datasets/benchmark/views/: _actions_latest.sql  _boards_latest.sql  _matches_agent_player_index.sql  _matches_latest.sql  _matches_overview.sql  _matches_rank.sql  _matches_result.sql  _players_latest.sql  _ships_true_action.sql  _shipyards_true_action.sql  _units_actions.sql  _units_created_deleted_at.sql  _units_latest.sql
halite_battlestation/functions/leaderboard-request/: main.py  requirements.txt
halite_battlestation/functions/leaderboard-to-bigquery/: main.py
halite_battlestation/functions/match-to-bigquery/: main.py  requirements.txt
halite_battlestation/functions/match-to-storage/: main.py  requirements.txt
halite_battlestation/functions/utils/: CHANGELOG.md
halite_battlestation/functions/utils/cloud_functions_utils/: pub_sub.py
halite_battlestation/tf/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
halite_battlestation/tf/modules/benchmark/: main.tf  variables.tf
halite_battlestation/tf/modules/bigquery_view/: main.tf  variables.tf
halite_battlestation/tf/modules/leaderboard/: main.tf  variables.tf
notebooks/: play_match_with_docker_images.py  publish_messages_to_match_request.py  publish_messages_to_pubsub.ipynb  publish_messages_to_pubsub.py
tf/: main.tf  terraform.tfstate  terraform.tfstate.backup
tf/modules/benchmark/: main.tf  variables.tf
tf/modules/cloud_functions/: main.tf  variables.tf
tf/modules/gcs__bigquery__view/: main.tf  variables.tf
tf/modules/leaderboard/: main.tf  variables.tf
(+1 files in other folders)
