[tool.poetry]
name = "halite-battlestation"
version = "0.1.0"
description = "An analytics cockpit for the Halite competition on Kaggle."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
google-cloud-bigquery = "^1.24.0"
google-cloud-error-reporting = "^0.33.0"
google-cloud-pubsub = "^1.4.3"
google-cloud-storage = "^1.28.0"
ipykernel = "^5.2.1"
kaggle = "^1.5.6"
kaggle-environments = "^0.2.1"
pylint = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
