[tool.poetry]
name = "halite-battlestation"
version = "0.1.0"
description = "An analytics cockpit for the Halite competition on Kaggle."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
cloud-functions-utils = "^0.3.0"
docker = "^4.2.2"
google-cloud-bigquery = "^1.25.0"
google-cloud-error-reporting = "^0.33.0"
google-cloud-pubsub = "^1.7.0"
google-cloud-storage = "^1.29.0"
ipykernel = "^5.4.2"
kaggle = "^1.5.6"
kaggle-environments = {git = "https://github.com/janjagusch/kaggle-environments.git", branch = "make-work-with-poetry"}
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
